--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,7 +7,7 @@ jobs:
       - checkout
 
       - run: sudo apt install nuget
-      - run: nuget
+      - run: nuget help
       # Add the Mono repository to your system
       #- run:
       #    command: |
@@ -26,13 +26,12 @@ jobs:
 
       # install SharePoint and Project Client Object Model libraries
       # https://www.powershellgallery.com/packages/SharePointOnline.CSOM/0.1.0
-      - run: Install-Module -Name SharePointOnline.CSOM -Force
-      - run: Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version
+      - run: nuget install Microsoft.SharePointOnline.CSOM -OutputDirectory packages
       
       # upload files to SharePoint Document Library
       - run:
-          command: .\spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username $env:USERNAME -password $env:PASSWORD -path C:\Users\circleci\project\javascript\files
-          working_directory: .\javascript\tools
+          command: ./spLibUpload.ps1 -url https://spkuratest.sharepoint.com -library "テスト用ライブラリ" -username $USERNAME -password $PASSWORD -path ./javascript/files
+          working_directory: ./javascript/tools
 
 
       - run: npm install typescript
