--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -19,6 +19,7 @@ jobs:
       # Install .Net Core
       - run:
           command: |
+            sudo apt-get install apt-transport-https
             wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
             sudo dpkg -i packages-microsoft-prod.deb
             sudo apt-get update; \
@@ -32,7 +33,6 @@ jobs:
       # Add the Mono repository to your system
       #- run:
       #    command: |
-      #      sudo apt-get install apt-transport-https
       #      sudo apt install gnupg ca-certificates
       #      sudo apt-key adv --keyserver hkp://keyserver.ubuntu.com:80 --recv-keys 3FA7E0328081BFF6A14DA29AA6A19B38D3D831EF
       #      echo "deb https://download.mono-project.com/repo/ubuntu stable-bionic main" | sudo tee /etc/apt/sources.list.d/mono-official-stable.list
