--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -7,6 +7,7 @@ jobs:
       - checkout
 
       # Install PowerShell
+      # https://docs.microsoft.com/ja-jp/powershell/scripting/install/installing-powershell-core-on-linux?view=powershell-7#installation-via-package-repository---ubuntu-1804
       - run:
           command: |
             sudo apt-get install apt-transport-https
@@ -14,7 +15,8 @@ jobs:
             wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
             sudo dpkg -i packages-microsoft-prod.deb
             sudo apt-get update
-            sudo add-apt-repository universe
+            sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $（lsb_release -sc）universe"
+            sudo apt-get update
             sudo apt-get install -y powershell
             pwsh  
 
