upate config.yml

--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -15,7 +15,7 @@ jobs:
             wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
             sudo dpkg -i packages-microsoft-prod.deb
             sudo apt-get update
-            sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $（lsb_release -sc）universe"
+            sudo add-apt-repository "deb http://archive.ubuntu.com/ubuntu $(lsb_release -sc) universe"
             sudo apt-get update
             sudo apt-get install -y powershell
             pwsh  
