--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -8,28 +8,24 @@ jobs:
       - run: cat /etc/os-release
 
       # Install PowerShell
-      # https://docs.microsoft.com/ja-jp/powershell/scripting/install/installing-powershell-core-on-linux?view=powershell-7#installation-via-package-repository---ubuntu-1804
+      # https://docs.microsoft.com/ja-jp/powershell/scripting/install/installing-powershell-core-on-linux?view=powershell-7#installation-via-package-repository---debian-9
       - run:
           command: |
-            sudo apt-get install apt-transport-https
-            sudo apt-get install software-properties-common
-            wget -q https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb
-            sudo dpkg -i packages-microsoft-prod.deb
             sudo apt-get update
-            sudo add-apt-repository "deb http://jp.archive.ubuntu.com/ubuntu bionic universe"
+            sudo apt-get install -y curl gnupg apt-transport-https
+            curl https://packages.microsoft.com/keys/microsoft.asc | sudo apt-key add -
+            sudo sh -c 'echo "deb [arch=amd64] https://packages.microsoft.com/repos/microsoft-debian-stretch-prod stretch main" > /etc/apt/sources.list.d/microsoft.list'
             sudo apt-get update
             sudo apt-get install -y powershell
-            pwsh  
+            pwsh
 
       # Install .Net Core
-      - run:
-          command: |
-            wget https://packages.microsoft.com/config/ubuntu/18.04/packages-microsoft-prod.deb -O packages-microsoft-prod.deb
-            sudo dpkg -i packages-microsoft-prod.deb
-            sudo apt-get update; \
-            sudo apt-get install -y apt-transport-https && \
-            sudo apt-get update && \
-            sudo apt-get install -y aspnetcore-runtime-3.1
+      # https://docs.microsoft.com/ja-jp/dotnet/core/install/linux-debian
+      #- run:
+      #    command: |
+
+
+
 
       # Install NuGet
       - run: sudo apt install nuget
