--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -49,7 +49,7 @@ jobs:
       - run: pwsh -Command "Install-Module -Name SharePointOnline.CSOM -Force"
       #- run: pwsh -Command "Get-Module -Name SharePointOnline.CSOM -ListAvailable | Select Name,Version"
       - run: pwsh -Command "Get-Module -Name SharePointOnline.CSOM -ListAvailable"
-      - run: ls -l  /home/circleci/.local/share/powershell/Modules
+      - run: ls -l  /home/circleci/.local/share/powershell/Modules/SharePointOnline.CSOM
 
       # upload files to SharePoint Document Library
       - run:
