--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -30,7 +30,7 @@ jobs:
             sudo apt-get update; \
             sudo apt-get install -y apt-transport-https && \
             sudo apt-get update && \
-            sudo apt-get install -y dotnet-runtime-3.1
+            sudo apt-get install -y aspnetcore-runtime-3.1
             dotnet --list-runtimes
 
       # install SharePoint and Project Client Object Model libraries
