--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -22,8 +22,11 @@ jobs:
       - run: 
           command: npm install
           working_directory: ./helloworld-webpart
+      - run: npm version
       
       - run: sudo npm link gulp
+      - run: gulp -version
+
 
       # - save_cache:
       #    paths:
@@ -64,7 +67,7 @@ jobs:
       # Selenuim-side runnerの実行
       - run: 
           command: |
-            npm install selenium-side-runner
+            npm install -g selenium-side-runner
           working_directory: ./helloworld-webpart
       - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side
 
