--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -67,7 +67,8 @@ jobs:
       # Selenuim-side runnerの実行
       - run: 
           command: |
-            sudo npm install -g selenium-side-runner
+            npm install selenium-side-runner
+            sudo npm link selenium-side-runner
           working_directory: ./helloworld-webpart
       - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side
 
