--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,9 +70,7 @@ jobs:
             npm install selenium-side-runner
             sudo npm link selenium-side-runner
           working_directory: ./helloworld-webpart
-      - run: 
-      
-       -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=result
+      - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=result
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
