--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -69,16 +69,16 @@ jobs:
       - image: circleci/node:10-browsers # プライマリコンテナです。このなかでジョブコマンドが実行されます      
     steps:
       - checkout
-      
+
       # Selenuim-side runnerの実行
       - run: 
           command: |
             npm install selenium-side-runner
             sudo npm link selenium-side-runner
           working_directory: ./helloworld-webpart
-      - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=./selenium/result
+      - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=./selenium
       - store_test_results:
-          path: ./selenium/result/SharePoint_Test1.json
+          path: ./selenium/SharePoint_Test1.json
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
