--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -70,15 +70,16 @@ jobs:
     steps:
       - checkout
 
+      - run: mkdir ./test-reports
       # Selenuim-side runnerの実行
       - run: 
           command: |
             npm install selenium-side-runner
             sudo npm link selenium-side-runner
           working_directory: ./helloworld-webpart
-      - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=./selenium
+      - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=./test-reports
       - store_test_results:
-          path: ./selenium/SharePoint_Test1.json
+          path: ./test-reports/SharePoint_Test1.json
 
 orbs:
   sonarcloud: sonarsource/sonarcloud@1.0.1
