--- a/.circleci/config.yml
+++ b/.circleci/config.yml
@@ -77,7 +77,11 @@ jobs:
             npm install selenium-side-runner
             sudo npm link selenium-side-runner
           working_directory: ./helloworld-webpart
-      - run: selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=./test-reports
+      - run: 
+          command: |
+            set +e
+            selenium-side-runner -c "browserName=chrome goog:chromeOptions.args=[disable-infobars,headless]"  ./selenium/SharePoint_Test1.side --output-directory=./test-reports
+            cat ./test-reports/SharePoint_Test1.json
       - store_test_results:
           path: ./test-reports/SharePoint_Test1.json
 
